import java.util.Iterator;
import java.util.List;
import java.util.ArrayList;
public class JazzBandEnsemble extends Ensemble{
    private final int PIANIST_ROLE = 1;
    private final int SAXOPHONIST_ROLE = 2;
    private final int DRUMMER_ROLE = 3;

    public JazzBandEnsemble(String eID){
        super(eID);
    }

    @Override
    public void updateMusicianRole(){
        EnsembleFactory factory = EnsembleFactoryRegistry.getFactory(this);
        java.util.Iterator<Musician> it = super.getMusicians();
        boolean anyInvalid = false;
        while (it.hasNext()) {
            Musician m = it.next();
            int role = m.getRole();
            if (!factory.isValidRole(role)) {
                System.out.println("\nWarning: Musician " + m.getMID() + " has invalid role " + role + ", resetting to 0.");
                m.setRole(0);
                anyInvalid = true;
            }
        }
        // if (!anyInvalid) {
        //     System.out.println("\nAll musician roles are valid for this jazz band.");
        // }
          
    }
    @Override
    public void showEnsemble(){

        EnsembleFactory factory = EnsembleFactoryRegistry.getFactory(this);
        System.out.println(factory.getEnsembleType() + " " + super.getName()+" (" + super.getEnsembleID() + ")");
        factory.showEnsembleInfo(this);
        // int[] roleValue = factory.getAllRoles(this);

        // for(int i=0;i<roleValue.length;i++) {
        //     String roleName = factory.getRoleName(roleValue[i]);
        //     System.out.println(roleName + ":");
        //     Iterator<Musician> iterator = super.getMusicians();
        //     List<Musician> musicianList = new ArrayList<>();
        //     while (iterator.hasNext()) {
        //      musicianList.add(iterator.next());
        //     }
        //     boolean hasinstrument = false;
        //     for(Musician musician : musicianList) {
        //         if(musician.getRole() == roleValue[i]) {
        //             System.out.println(musician.getMID()+", " + musician.getName());
        //             hasinstrument = true;
        //         }
        //     }
        //     if(!hasinstrument) {
        //         System.out.println("NIL");
        //     }
        // }
    }
}
